force-app/main/default/objects/sugati__Target_Mark_Up__c/sugati__Target_Mark_Up__c.object-meta.xml
<CustomObject>
    <label>Target Mark-Up</label>
    <nameField>
        <displayFormat>TM-{0000000}</displayFormat>
        <label>Target Margin ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Mark-Ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>