force-app/main/default/objects/sugati__Target_Mark_Up__c/fields/sugati__TMU_APC__c.field-meta.xml
<CustomField>
    <fullName>sugati__TMU_APC__c</fullName>
    <description>Licencible /Not EU</description>
    <inlineHelpText>LIC, NOT TO EU</inlineHelpText>
    <label>APC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>