force-app/main/default/objects/sugati__Target_Mark_Up__c/fields/sugati__TMU_FFP__c.field-meta.xml
<CustomField>
    <fullName>sugati__TMU_FFP__c</fullName>
    <inlineHelpText>NON-LIC, NOT TO EU</inlineHelpText>
    <label>FFP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>