force-app/main/default/objects/sugati__Target_Mark_Up__c/fields/sugati__TMU_Target_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__TMU_Target_Margin__c</fullName>
    <label>Target Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>