force-app/main/default/objects/sugati__Target_Mark_Up__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__TMU_Target_Margin__c</columns>
    <columns>sugati__TMU_APC__c</columns>
    <columns>sugati__TMU_FFP__c</columns>
    <columns>sugati__TMU_TOMS_APC__c</columns>
    <columns>sugati__TMU_TOMS_FFP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>